# microTask

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
contracts/: Cargo.toml
contracts/micro_task_payment/: Cargo.toml
micro-task-payment-dapp/: README.md
micro-task-payment-dapp/contracts/micro_task_payment/src/: lib.rs
micro-task-payment-dapp/src/app/: globals.css
micro-task-payment-dapp/src/app/main/: page.tsx
micro-task-payment-dapp/src/components/: PaymentModal.tsx
micro-task-payment-dapp/src/hooks/: useFreighter.ts
micro-task-payment-dapp/src/types/: index.ts
src/app/: layout.tsx  page.tsx
src/components/: TaskCard.tsx  WalletConnect.tsx
src/services/: stellar.ts
